# synth

./: CMakeLists.txt  README.md  c11threads.h  main.c  main2.c
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
